--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub Tutorial</title>
     <link rel="stylesheet" href="style.css"/>
-    <script src="script.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="img_container active" style="background-image:url('1.png');"></div>
-        <div class="img_container" style="background-image:url('2.png');"></div>
-        <div class="img_container">
+        <div class="container">
+        <div class="slide active" style="background-image:url('1.png');"></div>
+        <div class="slide" style="background-image:url('2.png');"></div>
+        <div class="slide">
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
