Added one more slide and reduced margin

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="slide" style="background-image:url('3.png');"></div>
             <div class="slide" style="background-image:url('4.png');"></div>
             <div class="slide" style="background-image:url('5.png');"></div>
+            <div class="slide" style="background-image:url('6.png');"></div>
         </div>
     <script src="script.js"></script>
 </body>
