--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <div class="slide" style="background-image:url('4.png');"></div>
             <div class="slide" style="background-image:url('5.png');"></div>
             <div class="slide" style="background-image:url('6.png');"></div>
+            <div class="slide" style="background-image:url('7.png');"></div>
+            <div class="slide" style="background-image:url('8.png');"></div>
         </div>
     <script src="script.js"></script>
 </body>
