--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <div class="slide" style="background-image:url('6.png');"></div>
             <div class="slide" style="background-image:url('7.png');"></div>
             <div class="slide" style="background-image:url('8.png');"></div>
+            <div class="slide" style="background-image:url('9.png');"></div>
+            <div class="slide" style="background-image:url('10.png');"></div>
         </div>
     <script src="script.js"></script>
 </body>
