Modified html and renamed an image file

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="slide" style="background-image:url('8.png');"></div>
             <div class="slide" style="background-image:url('9.png');"></div>
             <div class="slide" style="background-image:url('10.png');"></div>
+            <div class="slide" style="background-image:url('11.png');"></div>
         </div>
     <script src="script.js"></script>
 </body>
